add form and fetch from firebase

--- a/src/shared/SharedStyles.scss
+++ b/src/shared/SharedStyles.scss
@@ -10,6 +10,10 @@
     justify-content: flex-start;
   }
 
+  &--end {
+    justify-content: flex-end;
+  }
+
   &--column {
     flex-direction: column;
   }
