--- a/src/components/shared/Modal.scss
+++ b/src/components/shared/Modal.scss
@@ -1,3 +1,5 @@
+@import "src/shared/Variables";
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -5,7 +7,7 @@
   width: 100%;
   height: 100vh;
   z-index: 20;
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: $opacity75;
 }
 
 .modal {
@@ -16,7 +18,7 @@
   background-color: white;
   padding: 1rem;
   border-radius: 14px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 2px 8px $opacity25;
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
 }
