--- a/src/components/informations/restauransts-list/RestaurantsList.scss
+++ b/src/components/informations/restauransts-list/RestaurantsList.scss
@@ -6,6 +6,16 @@
 
 .res-list {
   flex-wrap: wrap;
-  padding: 0;
   justify-content: flex-start;
+  flex: 1 0 30%;
+}
+
+.item-wrapper {
+  display: flex;
+  background-color: lightgreen;
+  position: relative;
+}
+
+.delete-item {
+  position: absolute;
 }
