--- a/src/shared/Variables.scss
+++ b/src/shared/Variables.scss
@@ -2,6 +2,8 @@ $color-red: red;
 $color-blue: royalblue;
 $color-grey-0: lightgrey;
 
+$color-success: lightgreen;
+
 $opacity75:  rgba(0, 0, 0, 0.75);
 $opacity25:  rgba(0, 0, 0, 0.25);
 
