--- a/src/components/shared/RestaurantItem.scss
+++ b/src/components/shared/RestaurantItem.scss
@@ -4,7 +4,8 @@
   list-style: none;
   flex-direction: column;
   align-items: flex-start;
-  flex: 1 0 30%;
+  flex: 0 0 30%;
   min-width: 200px;
+  min-height: 100px;
   background-color: $color-grey-0;
 }
