close toastr, delete message, firebaseId

--- a/src/components/shared/RestaurantItem.scss
+++ b/src/components/shared/RestaurantItem.scss
@@ -7,6 +7,9 @@
   flex: 0 0 30%;
   min-width: 200px;
   min-height: 100px;
-  cursor: pointer;
   background-color: $color-grey-0;
+
+  &--clickable {
+    cursor: pointer;
+  }
 }
