reload after delete, UI corrections

--- a/src/components/shared/toastr/Toastr.scss
+++ b/src/components/shared/toastr/Toastr.scss
@@ -11,6 +11,7 @@
   word-break: break-word;
   border-radius: 16px;
   color: white;
+  z-index: 10;
 
   &--success {
     background-color: $color-success;
