--- a/src/shared/Variables.scss
+++ b/src/shared/Variables.scss
@@ -1,9 +1,10 @@
 $color-red: red;
 $color-blue: royalblue;
 $color-grey-0: lightgrey;
+$color-grey-1: grey;
 
 $color-success: lightgreen;
 
-$opacity75:  rgba(0, 0, 0, 0.75);
-$opacity25:  rgba(0, 0, 0, 0.25);
+$opacity75: rgba(0, 0, 0, 0.75);
+$opacity25: rgba(0, 0, 0, 0.25);
 
