--- a/src/components/home-page/RestaurantInfo.scss
+++ b/src/components/home-page/RestaurantInfo.scss
@@ -1,4 +1,14 @@
-@import "../../shared/Variables";
+@import "src/shared/Variables";
+
+.restaurant-item {
+  list-style: none;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: 0 0 30%;
+  min-width: 200px;
+  min-height: 100px;
+  background-color: $color-grey-0;
+}
 
 .res-info-wrapper {
   min-height: 48px;
