add login form, separate css, UI organization

--- a/src/UI/styles/components/Form.scss
+++ b/src/UI/styles/components/Form.scss
@@ -1,6 +1,6 @@
-@import "src/shared/Variables";
+@import "../_variables";
 
-.add-new-form {
+.form {
   background-color: $color-grey-0;
   width: 50%;
   margin: 16px auto;
