--- a/src/UI/styles/_shared-style.scss
+++ b/src/UI/styles/_shared-style.scss
@@ -6,6 +6,10 @@
     justify-content: center;
   }
 
+  &--between {
+    justify-content: space-between;
+  }
+
   &--start {
     justify-content: flex-start;
   }
