--- a/src/UI/styles/components/Toastr.scss
+++ b/src/UI/styles/components/Toastr.scss
@@ -1,11 +1,11 @@
 @import "../_variables";
 
 .toastr {
-  position: absolute;
-  top: 5vh;
+  position: fixed;
+  top: 32px;
   left: 25%;
   width: 50%;
-  min-height: 72px;
+  min-height: 56px;
   font-size: 24px;
   font-weight: 500;
   word-break: break-word;
